--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build_base:
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, build]
     steps:
       - name: Setup go 1.16
         uses: actions/setup-go@v2
@@ -53,7 +53,7 @@ jobs:
 
   build_blobber:
     needs: build_base
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, build]
     steps:
       - name: Set GITHUB_ENV
         run: |
@@ -97,7 +97,7 @@ jobs:
        
   publish_blobber:
     needs: build_blobber
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted]
     steps:
       - name: Set GITHUB_ENV
         run: |
@@ -133,7 +133,7 @@ jobs:
 
   build_validator:
     needs: build_base
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, build]
     steps:
       - name: Set GITHUB_ENV
         run: |
@@ -179,7 +179,7 @@ jobs:
        
   publish_validator:
     needs: build_validator
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted]
     steps:
       - name: Set GITHUB_ENV
         run: |
