--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   unit_tests:
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, load-test]
     steps:
       - name: Setup go 1.16
         uses: actions/setup-go@v2
