--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   integration_test:
-    runs-on: [self-hosted, build]
+    runs-on: ubuntu-20.04
     timeout-minutes: 40
     steps:
   
