fix(devops): use external network in integration-tesets

--- a/docker.local/b0docker-compose.yml
+++ b/docker.local/b0docker-compose.yml
@@ -73,12 +73,12 @@ networks:
   default:
     driver: bridge
   testnet0:
-    # external: true
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 198.18.0.0/15
-        - gateway: 198.18.0.255
+    external: true
+    # driver: bridge
+    # ipam:
+    #   config:
+    #     - subnet: 198.18.0.0/15
+    #     - gateway: 198.18.0.255
 
 
 volumes:
