Fix/clean GitHub action (#348)
* fix(devops):clean Dockerize, and enabled unit tests

* fix(devops):clean github actions

* fix(devops): replace runner with self-hosted runners

* fix(devops): fixed network issue

* fix(devops): removed network create script

* fix(devops): run integration-test on ubuntu-20.04

* fix(devops): run CodeQL on self-hosted runners

* fix(devops): run CodeQL on [self-hosted, build]

* fix(devops): try run CodeQL/integration-tests on [self-hosted, build]

* fix(devops): run CodeQL/integration-tests on github runner ubuntu-20.04

* fix(devops): use external network in integration-tesets

* fix(devops): reverted testnet0 to external

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,20 +2,21 @@ name: Benchmark tests
 
 on:
   push:
-    # branches: [ master ]
+    branches: [ master, staging, stream ]
   pull_request:
-    # branches: [ master ]
+    branches: [ master, staging, stream ]
 
 jobs:
   benchmark:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, load-test]
     steps:
- 
       - name: Setup go 1.16
         uses: actions/setup-go@v2
         with:
           go-version: '1.16' # The Go version to download (if necessary) and use.
 
+      - name: Clone blobber
+        uses: actions/checkout@v2
 
       - name: Set GITHUB_ENV
         run: |
@@ -23,8 +24,6 @@ jobs:
             echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
             echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
 
-      - name: Clone blobber
-        uses: actions/checkout@v2
 
       # - name: Clone gosdk
       #   run: |
