--- a/docker.local/b0docker-compose.yml
+++ b/docker.local/b0docker-compose.yml
@@ -74,6 +74,12 @@ networks:
     driver: bridge
   testnet0:
     external: true
+    # driver: bridge
+    # ipam:
+    #   config:
+    #     - subnet: 198.18.0.0/15
+    #     - gateway: 198.18.0.255
+
 
 volumes:
   data:
