fix(devops):try run CodeQL on [self-hosted,docker-builds]

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: [self-hosted, build]
+    runs-on: [self-hosted, docker-builds]
     permissions:
       actions: read
       contents: read
