--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -5,6 +5,7 @@ on:
   branches:
     - staging
     - stream
+    - *
   tags: 
     - '*'
 
@@ -17,17 +18,13 @@ jobs:
   build_base:
     runs-on: [self-hosted, build]
     steps:
-      - name: Setup go 1.16
-        uses: actions/setup-go@v2
-        with:
-          go-version: '1.16' # The Go version to download (if necessary) and use.
       - name: Set GITHUB_ENV
         run: |
           echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
           echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
           echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
       - name: Clone blobber
-        uses: actions/checkout@v2      
+        uses: actions/checkout@v1     
 
       # - name: Clone gosdk
       #   run: |
@@ -62,7 +59,7 @@ jobs:
             echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
       
       - name: Clone blobber
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
 
       # - name: Clone gosdk
       #   run: |
@@ -122,12 +119,12 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push blobber
         run: |
-          docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG
-          docker push ${BLOBBER_REGISTRY}:$TAG
+          # docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG
+          # docker push ${BLOBBER_REGISTRY}:$TAG
 
-          SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
-          docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA
-          docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA  
+          # SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
+          # docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA
+          # docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA  
 
         
 
@@ -142,7 +139,7 @@ jobs:
             echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
       
       - name: Clone blobber
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
 
       # - name: Clone gosdk
       #   run: |
@@ -204,9 +201,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push validator
         run: |
-          docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG
-          docker push ${VALIDATOR_REGISTRY}:$TAG
+          # docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG
+          # docker push ${VALIDATOR_REGISTRY}:$TAG
 
-          SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
-          docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
-          docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
+          # SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
+          # docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
+          # docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
