--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   integration_test:
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted,build]
     timeout-minutes: 40
     steps:
   
@@ -26,13 +26,13 @@ jobs:
           go-version: '1.16' # The Go version to download (if necessary) and use.
 
       - name: Clone Blobber
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
 
       - name: Build test environment and run tests
         run: |
           sed -i '/#expose_ci_port/c\    ports:\n      - "5432:5432"' ./docker.local/b0docker-compose.yml
           ./docker.local/bin/blobber.init.setup.sh
-          docker network create --driver=bridge --subnet=198.18.0.0/15 --gateway=198.18.0.255 testnet0
+          docker network ls | grep testnet0 || docker network create --driver=bridge --subnet=198.18.0.0/15 --gateway=198.18.0.255 testnet0
           ./docker.local/bin/build.base.sh
           ./docker.local/bin/build.blobber.sh
           ./docker.local/bin/build.validator.sh
