--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -5,7 +5,6 @@ on:
   branches:
     - staging
     - stream
-    - 'fix/github_action_checkout'
   tags: 
     - '*'
 
@@ -119,12 +118,12 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push blobber
         run: |
-          # docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG
-          # docker push ${BLOBBER_REGISTRY}:$TAG
+          docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG
+          docker push ${BLOBBER_REGISTRY}:$TAG
 
-          # SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
-          # docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA
-          # docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA  
+          SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
+          docker tag blobber:latest ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA
+          docker push ${BLOBBER_REGISTRY}:$TAG-$SHORT_SHA  
 
         
 
@@ -201,9 +200,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Push validator
         run: |
-          # docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG
-          # docker push ${VALIDATOR_REGISTRY}:$TAG
+          docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG
+          docker push ${VALIDATOR_REGISTRY}:$TAG
 
-          # SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
-          # docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
-          # docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
+          SHORT_SHA=$(echo $GITHUB_SHA | head -c 8)
+          docker tag validator:latest ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
+          docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
