Fix/GitHub action checkout (#352)
* fix(devops):used checkout@v1

* fix(devops):try run CodeQL on self-hosted

* fix(devops):try run CodeQL on [self-hosted,build]

* fix(devops):try run CodeQL on [self-hosted,docker-builds]

* fix(devops):setup golang 1.16.x in CodeQL

* fix(devops):use checkout@v1 in dockerize.yml

* fix(devops):enabled  dockerize.yml on any branch for testing

* fix(devops):use checkout@v1 in integration-tests

* fix(devops):test docker build on fix/github_action_checkout

* fix(devops): fixed checkout issue on [self-hosted, build]

* fix(devops): reverted integration-test to run on ubuntu-20.04

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   integration_test:
-    runs-on: ubuntu-20.04
+    runs-on: [ubuntu-20.04]
     timeout-minutes: 40
     steps:
   
@@ -26,7 +26,7 @@ jobs:
           go-version: '1.16' # The Go version to download (if necessary) and use.
 
       - name: Clone Blobber
-        uses: actions/checkout@v2
+        uses: actions/checkout@v1
 
       - name: Build test environment and run tests
         run: |
