--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -16,14 +16,14 @@ on:
     branches: [ staging, master ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ staging ]
+    branches: [ staging, master ]
   schedule:
     - cron: '43 17 * * 1'
 
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-20.04
+    runs-on: [self-hosted, build]
     permissions:
       actions: read
       contents: read
@@ -39,7 +39,13 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v1
+
+    - name: Setup go 1.16
+      if: success()
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.x
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
