fix(devops):updated reviewer for dependabot pr

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,6 @@ updates:
       interval: "daily"
     open-pull-requests-limit: 10
     reviewers:
-    - kushthedude
+    - cnlangzi
     labels:
     - pr/dependencies
