--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -2,9 +2,7 @@ name: Benchmark tests
 
 on:
   push:
-    branches: [ master, staging, stream ]
-  pull_request:
-    branches: [ master, staging, stream ]
+    branches: [ master, staging ]
 
 jobs:
   benchmark:
