--- a/docker.aws/build.validator/Dockerfile
+++ b/docker.aws/build.validator/Dockerfile
@@ -32,7 +32,7 @@ WORKDIR $SRC_DIR/go/0chain.net/validator
 ARG image_tag
 ARG go_build_mode
 ARG go_bls_tag
-RUN go build -v -tags ${go_build_mode} -tags ${go_bls_tag} -ldflags "-X 0chain.net/core/build.BuildTag=${image_tag}"
+RUN go build -v -tags ${go_build_mode} -tags ${go_bls_tag} -ldflags "-X github.com/0chain/blobber/code/go/0chain.net/core/build.BuildTag=${image_tag}"
 
 # Copy the build artifact into a minimal runtime image:
 FROM golang:1.17.1-alpine3.14
