--- a/docker.local/b0docker-compose-github.yml
+++ b/docker.local/b0docker-compose-github.yml
@@ -8,7 +8,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_HOST_AUTH_METHOD: trust
     ports:
-      - "5432:5432"
+      - 5432:5432
     volumes:
       - ./blobber${BLOBBER}/data/postgresql:/var/lib/postgresql/data
     networks:
@@ -38,8 +38,8 @@ services:
       - ./keys_config:/blobber/keysconfig
       - ./blobber${BLOBBER}/data/tmp:/tmp
     ports:
-      - "505${BLOBBER}:505${BLOBBER}"
-      - "3150${BLOBBER}:3150${BLOBBER}"
+      - 505${BLOBBER}:505${BLOBBER}
+      - 3150${BLOBBER}:3150${BLOBBER}
     command: ./bin/blobber --port 505${BLOBBER} --grpc_port 3150${BLOBBER} --hostname 198.18.0.9${BLOBBER} --deployment_mode 0 --keys_file keysconfig/b0bnode${BLOBBER}_keys.txt --files_dir /blobber/files --log_dir /blobber/log --db_dir /blobber/data --minio_file keysconfig/minio_config.txt
     networks:
       default:
