--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -1,7 +1,7 @@
 name: "0Chain System Tests"
 
 concurrency:
-  group: ${{ github.head_ref }}
+  group: "${{ github.ref }}"
   cancel-in-progress: true
 
 on:
