fix(devops): skip to setup on chain if it is integration-test on github

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
           ../bin/blobber.start_github.sh
           docker ps
       - name: Run Blobber
-        run: make local-run 
+        run: make local-run &
 
       - name: Run Tests
         run: |
