--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           make local-run &
           sleep 5
-          make integration-tests 
+          sudo make integration-tests 
           # go17=$(which go)
           # root=$(pwd)
           # sudo CGO_ENABLED=1 root=$root integration=1  $go17 test -tags bn256  ./...
