fix(devops): use custom go to build it

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,10 +52,10 @@ jobs:
         run: |
           make local-run &
           sleep 5
-          sudo make integration-tests 
-          # go17=$(which go)
-          # root=$(pwd)
-          # sudo CGO_ENABLED=1 root=$root integration=1  $go17 test -tags bn256  ./...
+          #sudo make integration-tests 
+          go17=$(which go)
+          root=$(pwd)
+          sudo CGO_ENABLED=1 root=$root integration=1 $go17 test -tags bn256  ./...
 
   golangci:
     name: lint
