--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,14 +50,17 @@ jobs:
           docker ps
       - name: Run Tests
         run: |
+          make local-build
           make local-run &
-          sleep 20
+          sleep 10
           running=0
           echo "checking blobber server status"
           if [ $running -eq 0 ]; then
             echo -e "."
-            curl 127.0.0.1:5051 && $running=1 || sleep 1
+            curl 127.0.0.1:5051 && $running=1 || sleep 2
           fi
+
+          sleep 3
 
           #sudo make integration-tests 
           go17=$(which go)
