Fix/integration tests GitHub (#429)
* fix(devops): added gRPC status checking

* fix(devops): enabled tesets on pr and tags

* fix(devops): fixed yml syntax issues

* fix(devops): fixed yml syntax issues

* fix(devops): fixed yml syntax issues

* fix(main): fixed grpc server startup bug

* fix(dockerfile):uncomment local GOPROXY

* fix(devops):run integration-tests in single thread

* fix(devops):enabled integration switch

* feat(devops): run blobber outside docker on integration-tests job

* fix(devops): fixed sed issue on linux

* fix(devops): skip to setup on chain if it is integration-test on github

* fix(devops): merged Run blobber and Run tests

* fix(devops): moved integration variable to env

* fix(devops): fixed panic issue if zcn is offline on integration-tests

* fix(devops): reverted uncommentted code for debugging

* fix(devops): fixed evn vars for Run Tests

* fix(devops): fixed use make command instead of script

* fix(devops): run make integration-tests as sudoer

* fix(devops): use custom go to build it

* fix(devops): sleep more time to wait grpc server to up

* fix(devops): added status checking

* fix(devops): added sleep time for build

* fix(devops): removed local-build from local-run

* fix(devops): run make local-run with sudoer

* fix(devops): disable workers on integration-tests

* fix(devops): enabled dockerize job on PR for system_test

* fix(devops): fixed GITHUB_REF for PR

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -6,6 +6,7 @@ on:
       - staging
     tags: 
       - '*'
+  pull_request:
 
   workflow_dispatch:
 
@@ -20,9 +21,8 @@ jobs:
     steps:
       - name: Set GITHUB_ENV
         run: |
-          echo "BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-          echo "GOSDK=$(echo $(dirname $(pwd)))/gosdk" >> $GITHUB_ENV
-          echo "TAG=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g' )" >> $GITHUB_ENV
+          echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF##*/}) | sed 's/\//-/g' )" >> $GITHUB_ENV
       - name: Clone blobber
         uses: actions/checkout@v1     
   
