--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -1,8 +1,16 @@
-name: "0Chain System Tests"
+name: "0Chain System Tests" 
+
+concurrency:
+  group: "${{ github.ref }}"
+  cancel-in-progress: true
 
 on:
   workflow_dispatch:
     inputs:
+       system_tests_branch:
+        description: 'system_tests branch. Containing the tests you wish to run'
+        default: 'master'
+        required: true
        zbox_cli_branch:
         description: '0Box CLI (branch or commit SHA) which the tests will use'
         default: 'staging'
@@ -35,11 +43,21 @@ on:
         description: '0block DOCKER IMAGE to deploy'
         default: 'staging'
         required: true
+       skip_tests:
+        description: '(LAST RESORT ONLY) Skip system tests. This will allow a PR to merge without requiring a green test run.  *By using you certify that the code being merged is not causing system tests to fail*'
+        default: 'FALSE'
+        required: true
 jobs:
   system-tests:  
     runs-on: [ tests-suite ]
+    timeout-minutes: 40
     steps:
       
+    - uses: jwalton/gh-find-current-pr@v1
+      id: findPr
+      with:
+        github-token: ${{ github.token }} 
+        
     - name: Extract branch name
       shell: bash
       run: |
@@ -48,3 +66,68 @@ jobs:
          echo "##[set-output name=pr_number;]$(echo $pull_number)"
       id: extract_branch     
     
+    - name: Set PR Status Pending
+      uses: niteoweb/pull_request_status_action@v1.0.0
+      if: steps.findPr.outputs.number
+      with:
+        pr_number: ${{ steps.findPr.outputs.pr }}
+        description: "System tests running"
+        state: "pending"
+        repository: ${{ github.repository }}
+        context: ${{ github.workflow }}
+        target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - uses: stewartie4/trigger-workflow-and-wait@master
+      name: "Run System Tests"
+      if: ${{ github.event.inputs.skip_tests == 'FALSE' }}
+      with:
+        owner: 0chain
+        repo: system_test
+        github_token: ${{ secrets.SVC_ACCOUNT_SECRET }}
+        workflow_file_name: ci.yml
+        ref: github.event.inputs.system_tests_branch
+        wait_interval: 60
+        inputs: > 
+           {
+               "test_run_description" : "Triggered by [${{ github.event.repository.name }}] repo, branch [${{ steps.extract_branch.outputs.branch }}], URL [https://github.com/0chain/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}]",
+               "zbox_cli_branch" : "${{github.event.inputs.zbox_cli_branch}}",
+               "zwallet_cli_branch" : "${{github.event.inputs.zwallet_cli_branch}}",
+               "miner_image": "${{github.event.inputs.miner_image}}",
+               "sharder_image": "${{github.event.inputs.sharder_image}}",
+               "blobber_image": "${{github.event.inputs.blobber_image}}",
+               "validator_image": "${{github.event.inputs.validator_image}}",
+               "zbox_image": "${{github.event.inputs.zbox_image}}",
+               "zblock_image": "${{github.event.inputs.zblock_image}}"
+           }
+        propagate_failure: true
+        trigger_workflow: true
+        wait_workflow: true
+        github_user: 'service-0chain'
+        
+    - name: Set PR Status Success
+      if: ${{ success() && steps.findPr.outputs.number }}
+      uses: niteoweb/pull_request_status_action@v1.0.0
+      with:
+        pr_number: ${{ steps.findPr.outputs.pr }}
+        description: "System tests success"
+        state: ${{ job.status }}
+        repository: ${{ github.repository }}
+        context: ${{ github.workflow }}
+        target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Set PR Status Failed
+      if: ${{ failure() && steps.findPr.outputs.number }}
+      uses: niteoweb/pull_request_status_action@v1.0.0
+      with:
+        pr_number: ${{ steps.findPr.outputs.pr }}
+        description: "System tests failure"
+        state: ${{ job.status }}
+        repository: ${{ github.repository }}
+        context: ${{ github.workflow }}
+        target_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
