--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set GITHUB_ENV
         run: |
           echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "TAG=$(echo ${GITHUB_REF##*/}) | sed 's/\//-/g' )" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF##*/} | sed 's/\//-/g' )" >> $GITHUB_ENV
       - name: Clone blobber
         uses: actions/checkout@v1     
   
@@ -47,7 +47,7 @@ jobs:
       - name: Set GITHUB_ENV
         run: |
           echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "TAG=$(echo ${GITHUB_REF##*/}) | sed 's/\//-/g' )" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF##*/} | sed 's/\//-/g' )" >> $GITHUB_ENV
       
       - name: Clone blobber
         uses: actions/checkout@v1
@@ -84,7 +84,7 @@ jobs:
       - name: Set GITHUB_ENV
         run: |
           echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "TAG=$(echo ${GITHUB_REF##*/}) | sed 's/\//-/g' )" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF##*/} | sed 's/\//-/g' )" >> $GITHUB_ENV
     
       - name: Download blobber
         uses: actions/download-artifact@v2
@@ -119,7 +119,7 @@ jobs:
       - name: Set GITHUB_ENV
         run: |
           echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "TAG=$(echo ${GITHUB_REF##*/}) | sed 's/\//-/g' )" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF##*/} | sed 's/\//-/g' )" >> $GITHUB_ENV
       
       - name: Clone blobber
         uses: actions/checkout@v1
@@ -158,7 +158,7 @@ jobs:
       - name: Set GITHUB_ENV
         run: |
           echo "BRANCH=$(echo ${GITHUB_REF##*/})" >> $GITHUB_ENV
-          echo "TAG=$(echo ${GITHUB_REF##*/}) | sed 's/\//-/g' )" >> $GITHUB_ENV
+          echo "TAG=$(echo ${GITHUB_REF##*/} | sed 's/\//-/g' )" >> $GITHUB_ENV
     
       - name: Download validator
         uses: actions/download-artifact@v2
