--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -36,7 +36,8 @@ challenge_completion_time: 2m # duration to complete a challenge
 # a task and redeem tokens, it should be big enough
 read_lock_timeout: 1m
 write_lock_timeout: 1m
-max_file_size: 104857600 #10MB
+
+max_file_size: 104857600 #10MB,please set it with 0 if file size is unlimited
 
 # update_allocations_interval used to refresh known allocation objects from SC
 update_allocations_interval: 1m
