--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -185,7 +185,8 @@ jobs:
           docker push ${VALIDATOR_REGISTRY}:$TAG-$SHORT_SHA
 
   system-tests:
-    needs: [publish_blobber, publish_validator]
+#    needs: [publish_blobber, publish_validator]
+    needs: [publish_blobber]
     runs-on: [self-hosted]
     steps:
       - name: Set GITHUB_ENV
@@ -205,7 +206,8 @@ jobs:
           miner_image:  staging
           sharder_image: staging
           blobber_image: ${{ env.TAG }}-${{ env.SHORT_SHA }}
-          validator_image: ${{ env.TAG }}-${{ env.SHORT_SHA }}
+#          validator_image: ${{ env.TAG }}-${{ env.SHORT_SHA }}
+          validator_image: staging
           zbox_image: staging
           zblock_image: staging
           zdns_image: staging
